--- a/index.html
+++ b/index.html
@@ -8,22 +8,29 @@
 </head>
 
 <body>
-    <div class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
-            <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
-            </ul>
-        </div>
-    </div>
+    <!--Navigation-->
+   <header>
+       <h1>
+           <a href="/">Hori<span class="seo">seo</span>n</a>
+       </h1>
+       <nav>
+           <!--Unordered List Element-->
+           <ul>
+               <!--List Item Element-->
+               <li>
+                   <!--Anchor Element-->
+                   <a href="#search-engine-optimization">Search Engine Optimization</a>
+               </li>
+               <li>
+                   <a href="#online-reputation-managment">Online Reputration Management</a>
+               </li>
+               <li>
+                   <a href="#social-media-marketing">Socia Media Marketing</a>
+               </li>
+           </ul>
+       </nav>
+   </header>
+
     
     <div class="hero"></div>
     <div class="content">
@@ -49,6 +56,7 @@
             </p>
         </div>
     </div>
+   
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
