--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                    <a href="#search-engine-optimization">Search Engine Optimization</a>
                </li>
                <li>
-                   <a href="#online-reputation-managment">Online Reputration Management</a>
+                   <a href="#online-reputation-management">Online Reputation Management</a>
                </li>
                <li>
                    <a href="#social-media-marketing">Socia Media Marketing</a>
@@ -31,8 +31,34 @@
        </nav>
    </header>
 
-    
+    <!--HERO/JUMBOTRON-->
     <div class="hero"></div>
+    <!--3 SECTIONS-->
+    
+    <article class="offer" id="search-engine-optimization">
+        <img src="./images/search-engine-optimization.jpg" alt="A table with a laptop,cup of coffee, cup of pens and a notebok that has SEO written in the middle of the page" />
+        <div class="offer-detail text-left">
+            <h2>Search Engine Optimization</h2>
+            <p>The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.</p>
+        </div>        
+    </article>
+
+    <article class="offer" id="online-reputation-management">
+        <div class="offer-detail text-right">
+            <h2>Online Reputation Management</h2>
+            <p>The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business. </p>
+        </div>
+        <img src="./images/online-reputation-management.jpg" alt="laptop on a table with a bar graph of reputation on it" />
+    </article>
+
+    <article class="offer" id="social-media-marketing">
+        <img src="./images/social-media-marketing.jpg" alt="people meeting around the table with their laptops talking about social media marketing" />
+        <div class="offer-detail text-left">
+            <h2>Social Medial Marketing</h2>
+            <p>Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation. </p>
+        </div>
+    </article>
+    <!--
     <div class="content">
         <div class="search-engine-optimization">
             <img src="./images/search-engine-optimization.jpg" class="float-left" />
@@ -55,7 +81,7 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
-    </div>
+    </div> !-->
    
     <div class="benefits">
         <div class="benefit-lead">
